[tool.poetry]
name = "kfp-project"
version = "0.1.0"
description = ""
authors = ["tonouchi510 <tonouchi27@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
kfp = "^1.8.5"
fire = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
