[tool.poetry]
name = "pose-annotation"
version = "0.1.0"
description = ""
authors = ["tonouchi510 <tonouchi27@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9,<3.10"
google-cloud-vision = "^2.6.3"
google-cloud-storage = "^2.1.0"
tensorflow = "^2.8.0"
absl-py = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
