[tool.poetry]
name = "training"
version = "0.1.0"
description = ""
authors = ["tonouchi510 <tonouchi27@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9,<3.10"
tensorflow = "2.6.0"
google-cloud-storage = "^1.42.3"
cloud-tpu-client = "^0.10"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
