[tool.poetry]
name = "training"
version = "0.1.0"
description = ""
authors = ["tonouchi27 <tonouchi27@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9,<3.10"
google-cloud-storage = "^2.1.0"
PyYAML = "^6.0"
setuptools = "^60.8.0"
tensorflow = "^2.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
